@@ -1,6 +1,7 @@
 HEAD
 	+ Set version to 8.0.0
 	+ Add initial-setup and enable-module scripts
+	+ Update dhcp-dyndns script
 7.1.0
 	+ Bump version number
 7.0.2
